--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -21,6 +21,9 @@ nav a, #hero-msg h1, #hero-msg h4, .button-box, main section{
     text-align: center;
     
 }
+#hero-img{
+    width:100%;
+}
 body {
     background-color: var(--primary-color);
     margin: 0 auto;
@@ -28,28 +31,38 @@ body {
 header {
     background-color: var(--accent1-color);
 }
-nav a:hover, .book, .join, .book:hover, .join:hover, #background, .msg, footer{
+nav a:hover, .book, .book:hover, .join:hover,footer{
     background-color: var(--primary-color);
     width:75%;
     margin: 0 auto;
 }
+#background{
+    width:100%;
+    height:400px;
+}
 
-nav a, nav a:hover, .home-title, h4, .book, .join, .book:hover, .join:hover, .msg h2, .msg p, footer h3, footer a, footer a:hover{
-    background-color: var(--paragraph-background-color);
+.mountains {
+    width:50%;
+}
+
+nav a, nav a:hover, .home-title, h4, .book, .join, .book:hover, .join:hover, .msg, footer h3, footer a, footer a:hover{
     color: var(--paragraph-color-on-color);
     padding: 5px;
 }
 
-.icon{
+.icon, .logo{
     width:80px;
 }
 
-nav a, .book, .join, footer a{
-    text-align: center;
+nav a, .book, .join, footer{
     color: var(--paragraph-color-on-color);
     text-decoration: none;
+    width:100%;
+    background-color: var(--paragraph-background-color);
 }
-
+.msg{
+    background-color: var(--paragraph-background-color);
+}
 footer p {
     font-size: 1.2em;
 }
