--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -17,60 +17,126 @@
     max-width: 1600px;
     margin: 0 auto;
 }
-nav a, #hero-msg h1, #hero-msg h4, .button-box, main section{
+nav a{
+    width:100%;
+    text-decoration: none;
     text-align: center;
+    padding: 5px;
+    color: var(--paragraph-color-on-color);
+    background-color: var(--paragraph-background-color);
     
 }
-
+nav a:hover {
+    width:75%;
+    margin: 0 auto; 
+    padding: 5px; 
+    color: var(--paragraph-color-on-color);
+    background-color: var(--primary-color);
+}
+#hero-msg h1, #hero-msg h4, .button-box, main section{
+    text-align: center;
+}
+main section img {
+    box-sizing: border-box;
+}
 .card-img {
+    width: 100%;
+    border:10px solid var(--headline-color-on-white);
+}
+#hero-img {
     width:100%;
 }
-#hero-img{
-    width:100%;
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
 body {
     background-color: var(--primary-color);
     margin: 0 auto;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding:0;
+}
+h2 {
+    margin:0;
 }
 header {
     background-color: var(--accent1-color);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-nav a:hover, .book, .book:hover, .join:hover,footer{
+.book, .join {
+    background-color: var(--primary-color);
+    color: var(--paragraph-color-on-color);
+    text-decoration: none;
+    font-size: 18px;
+    padding:15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.book:hover {
     background-color: var(--primary-color);
     width:75%;
     margin: 0 auto;
+    color: var(--paragraph-color-on-color);
+    padding: 5px;
+}
+.join:hover{
+    background-color: var(--primary-color);
+    width:75%;
+    margin: 0 auto;
+    color: var(--paragraph-color-on-color);
+    padding: 5px;
+}
+.home-title{
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2em;
+    color:var(--paragraph-color-on-white);
+    margin-top: 10px;
+}
+.msg {
+    background-color: var(--paragraph-background-color);
+    line-height: 1.5em;
+    color: var(--paragraph-color-on-color);
+    padding:35px;
+}
+.msg p{
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 #background{
     width:100%;
     height:400px;
 }
-
 .mountains {
     width:50%;
 }
-
-nav a, nav a:hover, .home-title, h4, .book, .join, .book:hover, .join:hover, .msg, footer h3, footer a, footer a:hover{
+h4, footer h3, footer a, footer a:hover{
     color: var(--paragraph-color-on-color);
     padding: 5px;
 }
-
-.icon, .logo{
+#logo-link {
+    padding-top:5px;
+}
+.logo{
     width:80px;
 }
-
-nav a, .book, .join, footer{
+.icon {
+    padding-top: 10px;
+    width:80px
+}
+footer {
+    background-color: var(--paragraph-background-color);
     color: var(--paragraph-color-on-color);
     text-decoration: none;
+    box-sizing: border-box;
+    padding: 25px 50px;
     width:100%;
-    background-color: var(--paragraph-background-color);
+    margin-top: 50px;
 }
-.msg{
-    background-color: var(--paragraph-background-color);
+footer .social img {
+    padding-top: 15px;
 }
 footer p {
     font-size: 1.2em;
 }
-
 footer p a:hover {
     text-decoration: underline;
 }
