--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -3,7 +3,11 @@
     --secondary-color: #DA9F93;
     --accent1-color: #D6465F;
     --accent2-color: #890620;
-  
+
+    --header-color: #d6465e78;
+    --menu-color: #DA9F9378;
+    --menu-hover-color: #EBD4CB78;
+
     --heading-font: "IM Fell French Canon";
     --paragraph-font: 'Oswald', sans-serif;
   
@@ -12,44 +16,97 @@
     --paragraph-color-on-white: #890620; 
     --paragraph-color-on-color: #B6465F; 
     --paragraph-background-color: #DA9F93;
+ 
   }
 #content {
     max-width: 1600px;
     margin: 0 auto;
+}
+header {
+    background-color: var(--header-color);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 nav a{
     width:100%;
     text-decoration: none;
     text-align: center;
     padding: 5px;
-    color: var(--paragraph-color-on-color);
-    background-color: var(--paragraph-background-color);
-    
+    color: var(--paragraph-color);
+    background-color: var(--menu-color);
 }
 nav a:hover {
     width:75%;
     margin: 0 auto; 
     padding: 5px; 
     color: var(--paragraph-color-on-color);
-    background-color: var(--primary-color);
+    background-color: var(--menu-hover-color);
 }
 #hero-msg h1, #hero-msg h4, .button-box, main section{
     text-align: center;
 }
-main section img {
-    box-sizing: border-box;
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
 }
-.card-img {
-    width: 100%;
-    border:10px solid var(--headline-color-on-white);
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 #hero-img {
     width:100%;
 }
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+#hero-msg h4 {
+    color: var(--headline-color-on-color);
+}
+main section img {
+    box-sizing: border-box;
+}
+main.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.rivers-card {
+    grid-column: 2/4;
+}
+.camping-card {
+    grid-column: 5/7;
+}
+.rapids-card {
+    grid-column: 8/10;
+}
+.card-img {
+    width: 100%;
+    border:10px solid var(--headline-color-on-white);
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px var(--accent2-color);
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
-    width:50%;
+    width:100%;
     margin: 0 auto;
+    grid-row: 2/3;
 }
 body {
     background-color: var(--primary-color);
@@ -60,10 +117,7 @@ body {
 h2 {
     margin:0;
 }
-header {
-    background-color: var(--accent1-color);
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
+
 .book, .join {
     background-color: var(--primary-color);
     color: var(--paragraph-color-on-color);
@@ -98,6 +152,9 @@ header {
     line-height: 1.5em;
     color: var(--paragraph-color-on-color);
     padding:35px;
+    grid-row: 6/7;
+    grid-column: 6/10;
+    box-shadow: 5px 5px 10px var(--accent2-color);
 }
 .msg p{
     font-size: .8em;
@@ -106,9 +163,14 @@ header {
 #background{
     width:100%;
     height:400px;
+    grid-row: 4/9;
+    grid-column: 1/11;
 }
 .mountains {
-    width:50%;
+    width:100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px var(--accent2-color);
 }
 h4, footer h3, footer a, footer a:hover{
     color: var(--paragraph-color-on-color);
@@ -118,7 +180,7 @@ h4, footer h3, footer a, footer a:hover{
     padding-top:5px;
 }
 .logo{
-    width:80px;
+    width:50px;
 }
 .icon {
     padding-top: 10px;
@@ -128,11 +190,17 @@ footer {
     background-color: var(--paragraph-background-color);
     color: var(--paragraph-color-on-color);
     text-decoration: none;
+    width:100%;
     box-sizing: border-box;
     padding: 25px 50px;
-    width:100%;
-    margin-top: 50px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
+    
+   
+   
 footer .social img {
     padding-top: 15px;
 }
@@ -141,4 +209,46 @@ footer p {
 }
 footer p a:hover {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
