--- a/personal/styles/page2.css
+++ b/personal/styles/page2.css
@@ -5,28 +5,26 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #EECFD4   ;
-  --secondary-color: #EFB9CB ;
-  --accent1-color: #E6ADEC;
-  --accent2-color: #C287E8;
+  --primary-color: #EBF2FA   ;
+  --secondary-color: #427AA1 ;
+  --accent1-color: #679436;
+  --accent2-color: #A5BE00;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --paragraph-font: Verdana, Geneva, Tahoma, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #C287E8;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #C287E8; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #EFB9CB  ;
-  --nav-link-color: #C287;
-  --nav-background-color: #EECFD4;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #EFB9CB;
+  --headline-color-on-white: #064789;  /* headlines on a white background */ 
+  --headline-color-on-color: #EBF2FA; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #427AA1; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #EBF2FA; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #427AA1  ;
+  --nav-link-color: #A5BE00;
+  --nav-background-color: #679436;
+  --nav-hover-link-color: #679436;
+  --nav-hover-background-color: #A5BE00;
 }
-
-/*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
   max-width: 1200px;
@@ -46,53 +44,17 @@ h1, h2, h3, h4, h5, h6 {
 h2 {
   text-align: center;
 }
-hr {
-  height: 3px;
-  margin: 35px 0;
-  background: var(--accent1-color);
-}
 header {
   padding: 1em;
   text-align: center;
   color: var(--paragraph-color-on-color);
   background-color: var(--paragraph-background-color);
 }
-header > h1, header > h2 {
-  color: var(--headline-color-on-color);
-}
-
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color);
   padding: 1em;
 }
-.colors {
-  width: 100%;
-  min-width: 350px;
-  margin: 30px auto;
-  text-align: center;
-}
-.colors th {
-  background-color: #999;
-}
-.colors td{
-  width: 25%;
-  height: 3em;
-}
-
-.primary {
-  background-color: var(--primary-color);
-}
-.secondary {
-  background-color: var(--secondary-color);
-}
-.accent1 {
-  background-color: var(--accent1-color);
-}
-.accent2{
-  background-color: var(--accent2-color);
-}
-
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
@@ -103,18 +65,14 @@ nav {
   line-height: 3em;
   text-align: center;
   font-size: 1.2em;
-}
-nav  {
   list-style-type: none;
   display: flex;
-
 }
 nav a {
   padding:1em;
   min-width: 120px;
   text-decoration: none;
   padding: 10px;
-
 }
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
@@ -123,52 +81,26 @@ nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
 }
-
-.sitemap {
-  display: grid;
-  justify-content: center;
-
-  grid-template-columns: repeat(6, 15%);
-  grid-template-rows: 3em 1.5em 1.5em 3em;
-  grid-template-areas: ". . home home . ."
-    ". . . top . ."
-    ". left left right right ."
-    "page2 page2 . . page3 page3";
+#active{
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
 }
-.sitemap > div {
-
+header {
+  display: block;
+}
+header img{
+  float: left;
+  height: 100px;
+}
+nav {
+  width: fit-content;
+  height: 70px;
   text-align: center;
-
 }
-.sm-home {
-  grid-area: home;
-  background-color: #ccc;
-  line-height: 3em;
+main {
+  background-color: var(--paragraph-background-color);
+  padding: 5px;
 }
-.sm-page2 {
-  grid-area: page2;
-  background-color: #ccc;
-  line-height: 3em;
-}
-.sm-page3 {
-  grid-area: page3;
-  background-color: #ccc;
-  line-height: 3em;
-}
-
-.top {
-  grid-area: top;
-  border-left: 1px solid;
-}
-
-.left {
-  grid-area: left;
-  border-top: 1px solid;
-  border-left: 1px solid;
-}
-
-.right {
-  grid-area: right;
-  border-top: 1px solid;
-  border-right: 1px solid;
+main img{
+  width: 50%;
 }
