--- a/personal/styles/home.css
+++ b/personal/styles/home.css
@@ -26,16 +26,49 @@ Fonts are separated by a | */
   --nav-hover-background-color: #A5BE00;
 }
 body {
-  background-color: var(--primary-color);
   height: 100%;
+  background: linear-gradient(
+        120deg, 
+        var(--secondary-color) 60%, 
+        var(--accent2-color) 60%
+    );
 }
+.parent {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  }
+  
+  .div1 { 
+    grid-area: 1 / 1 / 2 / 4; 
+    width: 70%;
+  }
+  .div2 { 
+    grid-area: 2 / 1 / 3 / 2; 
+    height: 200px;
+    width: 200px;
+  }
+  .div3 { 
+    grid-area: 2 / 2 / 3 / 3; 
+    height: 150px;
+    width: 200px;
+  }
+  .div4 { 
+    grid-area: 2 / 3 / 3 / 4; 
+    height: 100px;
+    width: 200px;
+  }
+  
+  
 main {
   margin: 0 auto;
   margin-top: 5em;
   max-width: 1000px;
 }
 h2.intro {
-  background-color: var(--paragraph-background-color);
+  background-color: var(--headline-color-on-white);
   color: var(--paragraph-color-on-color);
   padding: 2em;
 }
