--- a/personal/styles/page2.css
+++ b/personal/styles/page2.css
@@ -26,8 +26,12 @@ Fonts are separated by a | */
   --nav-hover-background-color: #A5BE00;
 }
 body {
-  background-color: var(--primary-color);
   height: 100%;
+  background: linear-gradient(
+        120deg, 
+        var(--secondary-color) 60%, 
+        var(--accent2-color) 60%
+    );
 }
 main {
   margin: 0 auto;
@@ -35,7 +39,7 @@ main {
   max-width: 1000px;
 }
 h2.intro {
-  background-color: var(--paragraph-background-color);
+  background-color: var(--headline-color-on-white);
   color: var(--paragraph-color-on-color);
   padding: 2em;
 }
