--- a/personal/styles/home.css
+++ b/personal/styles/home.css
@@ -33,41 +33,13 @@ body {
         var(--accent2-color) 60%
     );
 }
-.parent {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
-  }
-  
-  .div1 { 
-    grid-area: 1 / 1 / 2 / 4; 
-    width: 70%;
-  }
-  .div2 { 
-    grid-area: 2 / 1 / 3 / 2; 
-    height: 200px;
-    width: 200px;
-  }
-  .div3 { 
-    grid-area: 2 / 2 / 3 / 3; 
-    height: 150px;
-    width: 200px;
-  }
-  .div4 { 
-    grid-area: 2 / 3 / 3 / 4; 
-    height: 100px;
-    width: 200px;
-  }
-  
   
 main {
   margin: 0 auto;
   margin-top: 5em;
   max-width: 1000px;
 }
-h2.intro {
+.intro {
   background-color: var(--headline-color-on-white);
   color: var(--paragraph-color-on-color);
   padding: 2em;
@@ -77,6 +49,7 @@ h1 {
   padding: 1em;
   color: var(--headline-color-on-color);
   background-color: var(--headline-color-on-white);
+  font-family: var(--heading-font);
 }
 h2 {
   display: block;
@@ -85,6 +58,7 @@ h2 {
   background-color: var(--nav-hover-link-color);
   border-radius: 2em;
   color: var(--primary-color);
+  font-family: var(--paragraph-font);
 }
 main img{
   display: block;
@@ -121,6 +95,7 @@ header img{
   text-decoration: none;
   font-size: 17px;
   background-color: var(--paragraph-color-on-white);
+  font-family: var(--heading-font);
 }
 
 .navbar a:hover {
