--- a/personal/styles/site-plan.css
+++ b/personal/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #EECFD4   ;
-  --secondary-color: #EFB9CB ;
-  --accent1-color: #E6ADEC;
-  --accent2-color: #C287E8;
+  --primary-color: #EBF2FA   ;
+  --secondary-color: #427AA1 ;
+  --accent1-color: #679436;
+  --accent2-color: #A5BE00;
 
   /* change the values below to your chosen font(s) */
   --heading-font: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   --paragraph-font: Verdana, Geneva, Tahoma, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #C287E8;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #C287E8; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #EFB9CB  ;
-  --nav-link-color: #C287;
-  --nav-background-color: #EECFD4;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #EFB9CB;
+  --headline-color-on-white: #064789;  /* headlines on a white background */ 
+  --headline-color-on-color: #EBF2FA; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #427AA1; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #EBF2FA; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #427AA1  ;
+  --nav-link-color: #A5BE00;
+  --nav-background-color: #679436;
+  --nav-hover-link-color: #679436;
+  --nav-hover-background-color: #A5BE00;
 }
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
